--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
             <div class="skillcard"><i class='bx bxl-javascript bx-lg ' ></i><p>JAVASCRIPT</p></div>
             <div class="skillcard"><i class='bx bxl-java bx-lg ' ></i><p>JAVA</p></div>
             <div class="skillcard"><i class='bx bxl-react bx-lg' ></i><p>REACT JS</p></div>
-            <div class="skillcard"><i class='bx bxl-redux bx-lg'></i><p>REDUX</p></div>
-            <div class="skillcard"><i class='bx bxl-spring-boot bx-lg ' ></i><p>SPRING-BOOT</p></div>
+            <!-- <div class="skillcard"><i class='bx bxl-redux bx-lg'></i><p>REDUX</p></div> -->
+            <!-- <div class="skillcard"><i class='bx bxl-spring-boot bx-lg ' ></i><p>SPRING-BOOT</p></div> -->
             <div class="skillcard"><i class='bx bxl-mongodb bx-lg' ></i><p>MONGO DB</p></div>
             <div class="skillcard"><i class='bx bxs-data bx-lg '></i><p>MYSQL</p></div>
             <div class="skillcard"><i class='bx bxl-git bx-lg '></i><p>GIT</p></div>
             <div class="skillcard"><i class='bx bxl-github bx-lg ' ></i><p>GITHUB</p></div>
-            <div class="skillcard"><i class='bx bxl-jquery bx-lg'></i><p>JQUERY</p></div>
+            <!-- <div class="skillcard"><i class='bx bxl-jquery bx-lg'></i><p>JQUERY</p></div> -->
 
         </div>
    
